--- a/myerp/myerp-business/pom.xml
+++ b/myerp/myerp-business/pom.xml
@@ -87,7 +87,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <scope>test</scope>
+            <!--  <scope>test</scope> -->
         </dependency>
     </dependencies>
 
