--- a/myerp/pom.xml
+++ b/myerp/pom.xml
@@ -239,7 +239,7 @@
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>9.4.1212</version>
-                <scope>runtime</scope>
+                <!-- <scope>runtime</scope>  -->
             </dependency>
 
             <!-- ===== Test unitaires ===== -->
