--- a/myerp/pom.xml
+++ b/myerp/pom.xml
@@ -239,16 +239,24 @@
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>9.4.1212</version>
-                <!-- <scope>runtime</scope>  -->
+                <!-- <scope>runtime</scope>  -->		
             </dependency>
 
             <!-- ===== Test unitaires ===== -->
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.12</version>
-                <scope>test</scope>
-            </dependency>
+		    <dependency>
+            	<groupId>junit</groupId>
+            	<artifactId>junit</artifactId>
+            	<version>4.12</version>
+            	<scope>test</scope>
+        	</dependency>
+	        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+			<dependency>
+			    <groupId>org.mockito</groupId>
+			    <artifactId>mockito-core</artifactId>
+			    <version>2.23.4</version>
+			    <scope>test</scope>
+			</dependency>
+        
         </dependencies>
     </dependencyManagement>
 
