--- a/myerp/pom.xml
+++ b/myerp/pom.xml
@@ -53,6 +53,7 @@
         <!-- ===== Version properties ===== -->
         <log4j.version>2.8.1</log4j.version>
         <spring.version>4.3.7.RELEASE</spring.version>
+        <sonar.exclusions>**/myerp-technical/**/*</sonar.exclusions>
     </properties>
 
 
@@ -256,6 +257,14 @@
 			    <version>2.23.4</version>
 			    <scope>test</scope>
 			</dependency>
+			
+			<!-- ===== Code quality / test coverage ===== -->
+			<!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
+			<dependency>
+			    <groupId>org.sonarsource.scanner.maven</groupId>
+			    <artifactId>sonar-maven-plugin</artifactId>
+			    <version>3.6.0.1398</version>
+			</dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -384,6 +393,14 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+       	    <!-- ===== code coverage analysis ===== -->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.3</version>
+			</plugin>
+        </plugins>
     </build>
 
 
